<resources>
    <string name="app_name">Kondhosthara</string>
    <string name="title_activity_maps">Kondhosthara</string>
    <string name="getLoc">Get Location</string>
    <string name="conBtn">CalculateRoute</string>
    <string name="qrGen">Generate QR Code</string>
    <string name="readQR">Read QR Code</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintemail">Enter Your Email Address</string>
    <string name="hintpassword">Enter Your Password</string>
    <string name="txtlogin">LOGIN</string>
    <string name="regBtn">Register</string>
    <string name="txtacrecover">Recover Your Account</string>
    <string name="txtname">Name</string>
    <string name="entername">Enter Your Name</string>
    <string name="retypepass">Retype the Password</string>
    <string name="enterId">Enter Your NIC Number</string>
    <string name="enterAddress">Enter Your Address</string>
    <string name="txtlogout">LOGOUT</string>
    <string name="txtphone">Enter the Phone Number</string>
    <string name="txtpassanger">I am a Passanger</string>
    <string name="txtowner">I am a Bus Owner</string>
    <string name="menubtn">Navigation Button</string>
    <string name="dname">Enter Driver\'s Name</string>
    <string name="demail">Enter Driver\'s Email</string>
    <string name="did">Enter Driver\'s NIC Number</string>
    <string name="daddress">Enter Driver\'s Address</string>
    <string name="dphn">Enter Driver\'s Phone Number</string>
    <string name="busname">Name of the Bus</string>
    <string name="busID">Regitration Number of the Bus</string>
    <string name="busrouteid">Route Permit Number</string>
    <string name="busriuteid">Route Number</string>
    <string name="busseactcount">Number of Passanger Seats</string>
    <string name="logout_button">logOut Button</string>
    <string name="profile_button">Profile Button</string>
    <string name="add_bus_button">Add bus button</string>
    <string name="drivername">Driver Name</string>
    <string name="driver_hours">Driver Hours</string>
    <string name="driver_distance_traveled">Driver Distance Traveled</string>
    <string name="scan_the_bus_s_qr_code">Scan the Bus\'s QR Code</string>
    <string name="logout">LOGOUT</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="map_button">Map Button</string>
    <string name="wallet">Wallet</string>
    <string name="scan_qr">Scan QR</string>
    <string name="map">Map</string>
    <string name="view_the_map">View the Map</string>
    <string name="credits_left_0">Credits Left : 0</string>
    <string name="distance_can_be_traveled_0km">Distance Can be Traveled : 0km</string>
    <string name="your_current_location_kandy">Your Current Location : Kandy</string>
    <string name="sign_out_from_the_app">Sign Out from the App</string>
    <string name="welcome_back_chalith">Welcome Back Chalith</string>
    <string name="title_activity_bus_view_map">BusViewMap</string>
    <string name="enter_end_location">Enter the Destination</string>
    <string name="search_radius">Search Radius :</string>
    <string name="originlocation">OriginLocation</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="current_location">Current Location</string>
    <string name="distance_traveled">Distance Traveled</string>
    <string name="notify_exit">Notify Exit</string>
    <string name="current_speed">Current Speed</string>
    <string name="credits_left">Credits Left</string>
    <string name="complains">Complains</string>
    <string name="select_the_destination">Select the Destination</string>
    <string name="distance_traveled_0km">Distance Traveled 0km</string>
    <string name="title_activity_driver_maps">DriverMapsActivity</string>
    <string name="a_passenger_requesting_to_exit_the_bus">A Passenger Requesting to Exit the Bus</string>
    <string name="please_stop_the_bus_in_the_bus_stop">Please Stop the bus in the bus stop.</string>
    <string name="mute">Mute</string>
    <string name="view_the_wallet">View the Wallet</string>
    <string name="view_the_profile">View the Profile</string>
    <string name="running_time">running time</string>
    <string name="driver_name">driver name</string>
    <string name="delete">Delete</string>
    <string name="routeid">routeID</string>
    <string name="bus_name">Bus Name</string>
    <string name="bus_id">Bus ID</string>
    <string name="remove_from_fleet">Remove from Fleet</string>
    <string name="revoke_login_credentials">Revoke Login Credentials</string>
    <string name="delete_account">Delete Account</string>
    <string name="view_the_fleet">View the Fleet</string>
    <string name="title_activity_owner_bus_view_map">OwnerBusViewMap</string>
    <string name="refresh">REFRESH</string>
    <string name="topup_wallet">TopUp Wallet</string>
    <string name="submit">SUBMIT</string>
    <string name="cvv">CVV</string>
    <string name="expiry_date_mm_yy">Expiry Date (MM/YY)</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="testdata">TESTDATA</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="earns">earns</string>
    <string name="passcount">passCount</string>
    <string name="ownerid">ownerID</string>
    <string name="view_earnings">View Earnings</string>
    <string name="go_to_payment">Go to Payment</string>
    <string name="comisview">comisView</string>
    <string name="go_to_payments">Go to Payments</string>
    <string name="payment_history">Payment History</string>
    <string name="owner_details">Owner Details</string>
    <string name="deleteChat">Delete Chat</string>
    <string name="editMsg">Edit Message</string>
    <string name="deleteMsg">Delete Message</string>
    <string name="messages">Messages</string>
    <string name="search">Search</string>
    <string name="message">Your Message</string>

</resources>