<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/busRecordLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/busIDTextViewManageBusOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/bus_id"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/busNameTextViewManageBusOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/bus_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/routeIDTextViewManageBusOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/routeid"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/driverNameTextViewManageBusOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/driver_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/runningTimeTextViewManageBusOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/running_time"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/deleteBtnManageBusOwner"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/delete"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>