<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aBusEarnRecordLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="10dp"
    >

    <TextView
        android:id="@+id/busIDTextViewEarnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/bus_id"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dateTextViewEarnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/date"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/earningsTextViewEarnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/earns"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/passCountTextViewEarnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/passcount"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/comisViewEarnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/comisview"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible" />


    <Button
        android:id="@+id/gotoPaymentFinBtn"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/go_to_payment"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible" />

</LinearLayout>