<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.OwnerMainFragment">

    <EditText
        android:id="@+id/editTextTextRegisterNameDriver"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:autofillHints="@string/entername"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/entername"
        android:inputType="textEmailAddress"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/editTextTextRegisterEmailAddressDriver"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:autofillHints="@string/hintemail"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/hintemail"
        android:inputType="textEmailAddress"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/editTextTextRegisterPasswordDriver"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:autofillHints="@string/hintpassword"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/hintpassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextTextRegisterPasswordConfirmDriver"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:autofillHints="@string/retypepass"
        android:ems="10"
        android:hint="@string/retypepass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextTextRegisterIDNumberDriver"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:autofillHints="@string/enterId"
        android:ems="10"
        android:hint="@string/enterId"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextTextRegisterAddressDriver"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:autofillHints="@string/enterAddress"
        android:ems="10"
        android:hint="@string/enterAddress"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextRegisterPhoneNumDriver"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:autofillHints="@string/txtphone"
        android:ems="10"
        android:hint="@string/txtphone"
        android:inputType="phone" />


    <Button
        android:id="@+id/userRegBtnDriver"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/regBtn" />

    <ProgressBar
        android:id="@+id/registerProgressBarDriver"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>