<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayoutDriverRecord"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/nameDriverTextViewManageDriverOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/bus_id"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/busIDTextViewManageDriverOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/bus_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phoneTextViewManageDriverOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/routeid"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nicTextViewManageBusOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/driver_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/experienceTextViewManageDriverOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/running_time"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/drvHoursTextViewManageDriverOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/running_time"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/deleteBtnManageDriverOwner"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:text="@string/remove_from_fleet"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>